[workspace]
members = [".", "oesu"]

[package]
name = "oesu2geojson"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
oesu            = { path = "oesu" }
fast-mvt        = { version = "0.3", features = ["writer"] }
pmtiles         = { version = "0.23", default-features = false, features = ["write"] }
martin-tile-utils = "0.7"
anyhow          = "1"
clap            = { version = "4", features = ["derive"] }
rayon           = "1"
serde_json      = "1"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }
# Private tool — not published to crates.io.
cargo_common_metadata   = "allow"
# Transitive dependency conflicts, not in our control.
multiple_crate_versions = "allow"
