[workspace]
members = [".", "oesu", "s57", "rnc-format"]

[package]
name = "quilt-tiler"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
oesu            = { path = "oesu" }
s57             = { path = "s57" }
fast-mvt        = { version = "0.4.1", features = ["writer"] }
pmtiles         = { version = "0.23", default-features = false, features = ["write"] }
martin-tile-utils = "0.7.4"
anyhow          = "1"
clap            = { version = "4", features = ["derive"] }
rayon           = "1"
profiling       = "1"
tracy-client    = { version = "0.18.4", features = ["enable"], optional = true }
indicatif       = { version = "0.18.4", features = ["rayon"] }
serde_json      = "1"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
geo = { version = "0.33.1", default-features = false, features = ["earcut", "spade"] }
image = { version = "0.25.10", default-features = false, features = ["png"] }
serde = { version = "1.0.228", features = ["derive"] }
rnc-format      = { path = "rnc-format" }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }
# Private tool — not published to crates.io.
cargo_common_metadata   = "allow"
# Transitive dependency conflicts, not in our control.
multiple_crate_versions = "allow"

[features]
# cargo run --features tracy  →  link Tracy client and emit profiling data
profiling = ["dep:tracy-client", "profiling/profile-with-tracy"]
