[package]
name = "oesu"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
s57    = { path = "../s57" }
tracing = "0.1"
geo    = "0.33.1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }
cargo_common_metadata   = "allow"
multiple_crate_versions = "allow"
