[package]
name = "rnc-format"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
geo = { version = "0.33", default-features = false }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }
cargo_common_metadata   = "allow"
multiple_crate_versions = "allow"
